[project]
name = "stock-researcher"
version = "0.1.0"
description = "한국/미국 증시 리서치 도구 (CLI + MCP 서버)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.40",
    "finance-datareader>=0.9.60",
    "requests>=2.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
stock = "stock_researcher.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
